# Email-triage-agent

./: .env.example  .env.production.example  .gitignore  README.md  pyproject.toml
src/gmail_triage_agent/: classifier.py  cli.py  config.py  dashboard.py  db.py  digest.py  gmail_client.py  models.py  notifications.py  service.py
tests/: test_classifier.py  test_dashboard.py  test_digest.py
